# approx_ratio

./: CMakeLists.txt  README.md  README.ru.md  approx_ratio.cpp
